# Vanitas-Bot

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  README.md  selfplay  test_no_random.txt
code/: main.cpp
code/BitEngine/: BitEngine.cpp  BitEngine.h
code/HashEngine/: HashEngine.cpp  HashEngine.h
code/IOEngine/: IOEngine.cpp  IOEngine.h  sample.cpp
code/SearchEngine/: SearchEngine.cpp  SearchEngine.h  SearchEngine.txt
code/SelfPlay/: SelfPlay.cpp  SelfPlay.h
code/TTable/: TTable.cpp  TTable.h
code/Utilities/Logger/: Logger.cpp  Logger.h
code/Utilities/Timer/: Timer.cpp  Timer.h
shell/: AutoCppToTxt.sh  AutoGetoutCode.sh
test_cases/: main_code.txt  test_1.txt  test_iter.txt  test_ori.txt
